Modificando o texto do paragrafo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div> -->
 
     <div id="container-cep" class="container-cep">  
-        <p  id="textoResultado" class="esconde">Resultado da Busca por Endereço ou CEP</p>    
+        <p  id="textoResultado" class="esconde">Resultado da Busca por CEP</p>    
         <table id="container-tabela" class="esconde">
             <thead class="container-cabecalhoTabela">
                 <th class="th1">Logradouro/Nome</th>
