Alterando o placeholder do input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="buscaCep" class="grid-buscarcep">
         <div class="container-buscarcep">
-            <input type="text" id="cep">
+            <input type="text" id="cep" placeholder="Informe o CEP">
         </div>
 
         <div class="container-buscarbtn">
